# d230404b_project_test

./: CMakeLists.txt  Main.qml  README.md  main.cpp
values/: CMakeLists.txt  testvalue.cpp  testvalue.h
